mainfests/author-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: author
  labels:
    app: author
spec:
  replicas: 1
  selector:
    matchLabels:
      app: author
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: author
    spec:
      containers:
        - name: author
          image: danuxpeach/authorization:lastest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 5005
