mainfests/author-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: author
spec:
  selector:
    app: author
  type: ClusterIP
  ports:
  - port: 5005
    targetPort: 5005
    protocol: TCP
