mainfests/feedback-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedbackservice
spec:
  selector:
    app: feedbackservice
  type: ClusterIP
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
