mainfests/file-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileservice
spec:
  selector:
    app: fileservice
  type: ClusterIP
  ports:
  - port: 5003
    targetPort: 5003
    protocol: TCP
